@@ -1,3 +1,9 @@
+2006-04-15  Tommi Komulainen  <tommi.komulainen@iki.fi>
+
+	* lib/widgets/ephy-location-entry.c (update_favicon): Replace
+	'stock-new' fallback favicon with more semantically correct
+	'text-html' It also looks better with Tango icon theme. Bug #337140
+
 2006-04-13  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-main.c:
